--- a/views/shared/header.html
+++ b/views/shared/header.html
@@ -7,33 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="author" content="常伟">
     <title>智游教育问答</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/all.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/all.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container dropdown">
-            <a class="navbar-brand" href="/">智游教育</a>
-            <div class="navbar-text pull-right text-right">
-                <span id="ask" onclick="location.href='/ask'"><span class="glyphicon glyphicon-plus"></span> 提问</span>&#x3000;
-                
-                <span id="user" class="dropdown-toggle" data-toggle="dropdown">
-                <span class="glyphicon glyphicon-user"></span> 
-
-                {{if user }}
-                <span>{{user}}</span> 
-                {{else}}
-                <span onclick="location.href='signin.html'">登录</span>
-                {{/if}}                 
-                </span>                
-                {{if user}}
-                <ul class="dropdown-menu dropdown-menu-right">
-                    <li><a class="text-right" href="user.html">个人资料</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a class="text-right">退出</a></li>
-                </ul>
-                {{/if}}
-            </div>
-        </div>
-    </nav>
